new changes on script