@@ -7,6 +7,12 @@
     <groupId>org.example</groupId>
     <artifactId>cucumber</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <repositories>
+        <repository>
+            <id>central</id>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
+    </repositories>
 
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
@@ -64,49 +70,34 @@
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
-<!--            <plugin>-->
-<!--                <groupId>io.cucumber</groupId>-->
-<!--                <artifactId>cucumber-maven-plugin</artifactId>-->
-<!--                <version>7.20.1</version>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <goals>-->
-<!--                            <goal>test</goal>-->
-<!--                        </goals>-->
-<!--                        <configuration>-->
-<!--                            <plugin>-->
-<!--                                <name>json</name>-->
-<!--                                <file>target/cucumber-reports/cucumber.json</file> &lt;!&ndash; Path to JSON report &ndash;&gt;-->
-<!--                            </plugin>-->
-
-<!--                        </configuration>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
-<!--            <plugin>-->
-<!--                <groupId>net.masterthought</groupId>-->
-<!--                <artifactId>maven-cucumber-reporting</artifactId>-->
-<!--                <version>5.8.0</version>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <goals>-->
-<!--                            <goal>generate</goal>-->
-<!--                        </goals>-->
-<!--                        <configuration>-->
-<!--                            <jsonFiles>-->
-<!--                                <param>target/cucumber-reports/cucumber.json</param> &lt;!&ndash; Path to the JSON reports &ndash;&gt;-->
-<!--                            </jsonFiles>-->
-<!--                            <outputDirectory>target/cucumber-reports</outputDirectory> &lt;!&ndash; Directory for the HTML report &ndash;&gt;-->
-<!--                        </configuration>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
+            <plugin>
+                <groupId>net.masterthought</groupId>
+                <artifactId>maven-cucumber-reporting</artifactId>
+                <version>5.8.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <jsonFiles>
+                                <param>target/cucumber-reports/cucumber.json</param>
+                            </jsonFiles>
+                            <outputDirectory>target/cucumber-reports</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <source>21</source>
                     <target>21</target>
+                        <compilerArgs>
+                            <arg>--add-opens</arg>
+                            <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                        </compilerArgs>
                 </configuration>
             </plugin>
 
@@ -135,6 +126,18 @@
 
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <parallel>classes</parallel>
+                    <threadCount>4</threadCount>
+                    <includes>
+                        <include>src/test/java/Runner/Runner.java</include> <!-- Make sure this is the correct path for your test runner class -->
+                    </includes>
+                </configuration>
             </plugin>
 
         </plugins>
